--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,9 @@ dependencies {
 
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'	
-	testImplementation 'org.mockito:mockito-core:2.21.0'
-        testImplementation 'org.mockito:mockito-inline:3.4.0'		
+
+        testImplementation 'org.mockito:mockito-junit-jupiter:4.11.0'
+
 }
 
 test { 	useJUnitPlatform() }
