--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,21 +1,40 @@
-version: 0.2
+name: Gradle Build with Java 17
 
-phases:
-  install:
-    runtime-versions:
-      java: corretto11
-  pre_build:
-    commands:
-      - echo Nothing to do in the pre_build phase...
-      - name: Make gradlew executable
-      - run: chmod +x ./gradlew
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+
+jobs:
   build:
-    commands:
-      - echo Build started on `date`
-      - gradlew build
-  post_build:
-    commands:
-      - echo Build completed on `date`
-artifacts:
-  files:
-    - target/Aes-Test-0.0.1-SNAPSHOT.jar
+    runs-on: ubuntu-latest
+
+    steps:
+      # Checkout del código
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      # Configuración de Java 17
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'corretto'
+          java-version: '17'
+
+      # Hacer el script de Gradle ejecutable
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
+
+      # Compilar el proyecto
+      - name: Build with Gradle
+        run: ./gradlew build
+
+      # Guardar el artefacto (archivo JAR generado)
+      - name: Upload Build Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: application-jar
+          path: build/libs/*.jar
