--- a/build.gradle
+++ b/build.gradle
@@ -19,9 +19,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
         implementation 'org.springframework.boot:spring-boot-starter-json'
    
-
         implementation 'com.fasterxml.jackson.core:jackson-core:2.14.2'
         implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
+        implementation 'ch.qos.logback:logback-classic:1.4.14'
+        implementation 'ch.qos.logback:logback-core:1.4.14'
 
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'	
