--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,12 +13,13 @@ server:
 
 whatsapp:
   api:
-    id: {App_id}
-    secret: {Facebook_Secret}
+    id: {id}
+    secret: {secret}
     base-url: https://graph.facebook.com/v21.0/414660938406899/messages
     token-uri: https://graph.facebook.com/v16.0/oauth/access_token
     expiration-token-uri: https://graph.facebook.com/debug_token
     token: {token}
+    challenge: {challenge}
   cellNumber: 414660938406899
   templateName: menuprincipal
   templateVideo: https://res.cloudinary.com/drkaz7gd6/video/upload/v1732592503/swjcivtyxi43nll7walh.mp4
