--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,25 +1,44 @@
 server:
-  port: 20000
+  port: 5000
   data:
-    contactos: C:/ruta/archivos/contactos/
-    events: C:/ruta/archivos/eventos/
-    reservas: C:/ruta/archivos/turnos/
-    out: C:/ruta/archivos/out/
-    response: C:/ruta/archivos/response/
-    equivalencia: C:/ruta/archivos/equivalencia/
-    tracking: C:/ruta/archivos/tracking/
-    nota: C:/ruta/archivos/nota/
-    token: C:/ruta/archivos/security/
+    contactos: contactos/
+    events: eventos/
+    reservas: turnos/
+    out: out/
+    response: response/
+    equivalencia: equivalencia/
+    tracking: tracking/
+    nota: nota/
+    token: token
 
 whatsapp:
   api:
-    id: {id}
-    secret: {secret}
-    base-url: https://graph.facebook.com/v21.0/414660938406899/messages
+    id: 1101260264846104
+    secret: secret
+    base-url: https://graph.facebook.com/v21.0/578846945306314/messages
     token-uri: https://graph.facebook.com/v16.0/oauth/access_token
     expiration-token-uri: https://graph.facebook.com/debug_token
-    token: {token}
-    challenge: {challenge}
-  cellNumber: 414660938406899
+    token: token
+    challenge: 1386287589
+  cellNumber: 5491138255605
   templateName: menuprincipal
   templateVideo: https://res.cloudinary.com/drkaz7gd6/video/upload/v1732592503/swjcivtyxi43nll7walh.mp4
+aws:
+  accessKeyId: AKIAQQABDVBWN2BE4CM4
+  secretAccessKey: secretAccessKey
+  region: us-east-2
+  bucket: beanstalk-apps-estudiogg
+spring:
+  cloud:
+    aws:
+      credentials:
+        access-key: AKIAQQABDVBWN2BE4CM4
+        secret-key: secretAccessKey
+      region: us-east-2
+      sqs:
+        enabled: true
+        endpoint: https://sqs.us-east-2.amazonaws.com
+      sns:
+        enabled: false  
+      stack:
+        auto: false
